objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer / Content Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Applies_To__c</fullName>
        <label>Applies To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guidanz</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>QuickServe Online (QSOL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Product and Service</fullName>
                </value>
                <value>
                    <fullName>Attachments</fullName>
                </value>
                <value>
                    <fullName>Work Instructions</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSTS_KMS_Article_ID__c</fullName>
        <description>Id of the articles imported from the KMS</description>
        <label>KMS Article ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pole_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pole Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for FAQ</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Redirection_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redirection Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repairs__c</fullName>
        <label>Repairs</label>
        <length>130768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Priority__c</fullName>
        <label>Solution Priority </label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validations__c</fullName>
        <label>Validations</label>
        <length>130768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Verification__c</fullName>
        <label>Verification</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>ALL_CSTS_Draft_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LANGUAGE</columns>
        <columns>Article_Type__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CSTS_KMS_Article_ID__c</columns>
        <columns>ABSTRACT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.CSTS_External,Knowledge__kav.CSTS_Internal</value>
        </filters>
        <label>All CSTS Draft Articles</label>
        <sharedTo>
            <group>CSTS_Australia_Admin</group>
            <role>CSTS_Australia_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_CSTS_Published_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Article_Type__c</columns>
        <columns>CSTS_KMS_Article_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.CSTS_External,Knowledge__kav.CSTS_Internal</value>
        </filters>
        <label>All CSTS Published Articles</label>
        <sharedTo>
            <role>CSTS_Australia_Agent</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CSTS_Archived_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.CSTS_External,Knowledge__kav.CSTS_Internal</value>
        </filters>
        <label>All CSTS Archived Articles</label>
        <sharedTo>
            <role>CSTS_Australia_Admin</role>
            <role>CSTS_Australia_Agent</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Solution_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.FAQ</value>
        </filters>
        <label>Solution Articles</label>
        <sharedTo>
            <group>CPS_Case_Team</group>
            <role>Customer_Support_Organization</role>
            <role>Factory</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.CSM_FAQ</value>
        </filters>
        <label>Archived Articles</label>
        <sharedTo>
            <group>CPS_Case_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PUBLISH_STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.CSM_FAQ</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
        <sharedTo>
            <group>CPS_Case_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>OWNER_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>URL_NAME</field>
            <operation>contains</operation>
            <value>S00002546,S00000443</value>
        </filters>
        <label>Published Articles</label>
        <sharedTo>
            <group>CPS_Case_Team</group>
        </sharedTo>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>CSM_FAQ</fullName>
        <active>true</active>
        <label>CSM FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSTS_External</fullName>
        <active>true</active>
        <description>CSTS: Created to track External Articles</description>
        <label>External Knowledge Article</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSTS_Internal</fullName>
        <active>true</active>
        <description>CSTS:Created to track Internal Articles</description>
        <label>Internal Knowledge Article</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles</description>
        <label>FAQ</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>